For now mostly slapped the ui back in one place for development purposes. UI looks okidoki for now.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
     </header>
 
     <div class="container">
-        <main role="main" class="pb-3 p-8">
+        <main role="main" class="pb-3 p-8" style="width: 99vw;">
             @RenderBody()
         </main>
     </div>
