--- a/Views/Home/_OutputOverviewPartial.cshtml
+++ b/Views/Home/_OutputOverviewPartial.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="output" class="tab-pane active">
+﻿<div id="output-overview-partial-container" class="tab-pane active">
     <img src="https://placehold.co/600x400" alt="Output Image" class="rounded-lg shadow-lg" />
 </div>
 <div id="overview" class="tab-pane hidden">
