--- a/Views/Home/_OutputPartial.cshtml
+++ b/Views/Home/_OutputPartial.cshtml
@@ -1,9 +1,10 @@
 ﻿<div class="tabs flex border-b">
-    <button class="tab tab-active font-bold py-2 px-4 rounded-t-lg bg-blue-500 text-white border-l border-t border-r border-zinc-300 dark:border-zinc-600" onclick="showTab('output')">
+    <button class="tab tab-active font-bold py-2 px-4 rounded-t-lg bg-blue-500 text-white border-l border-t border-r border-zinc-300 dark:border-zinc-600"
+            onclick="renderPartial('output-current')">
         Current
     </button>
     <button class="tab font-bold py-2 px-4 rounded-t-lg bg-white dark:bg-zinc-600 text-zinc-900 dark:text-white border-l border-t border-r border-zinc-300 dark:border-zinc-600"
-            onclick="showTab('overview')">
+            onclick="renderPartial('output-overview')">
         Overview
     </button>
 </div>
@@ -14,40 +15,6 @@
 </div>
 
 <script>
-
-    var selectedTab = 'overview'
-
-    // valid id's: overview, output
-    function switchTab(tabId) {
-
-        if (tabId !== "overview" && tabId !== "output") {
-            console.error("Invalid tab id: " + tabId));
-            return;
-        }
-
-        if (tabId === selectedTab) {
-            return;
-        })
-
-        var tabContainer = document.getElementById('tab-container');
-        var html = getHtml(tabId);
-        tabContainer.innerHTML = html;
-    }
-
-    function getHtml(tabId) {
-    
-        if (tabId === "output") {
-            return `@await Html.PartialAsync("_OutputCurrentPartial")`;
-        }
-        else if (tabId === "overview") {
-            return `@await Html.PartialAsync("_OutputOverviewPartial")`;
-        }
-        else {
-            console.error("No tab found for id: " + tabId);
-            return "";
-        });
-    }
-
     const tabs = document.querySelectorAll('.tab');
     const output = document.querySelector('.output');
     const overview = document.querySelector('.overview');
