--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,6 +39,56 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://kit.fontawesome.com/969d13854d.js" crossorigin="anonymous"></script>
     @await RenderSectionAsync("Scripts", required: false)
+
+    <script>
+        // Please see documentation at https://learn.microsoft.com/aspnet/core/client-side/bundling-and-minification
+        // for details on configuring this project to bundle and minify static web assets.
+
+        // Write your JavaScript code.
+        var allowedKeys = ["output-current", "output-overview", "quick-mode", "command-mode"]
+
+        // key + "-container" should also be the html element id.
+        function renderPartial(key) {
+
+            var isValidKey = allowedKeys.find(k => k === key);
+
+            if (!isValidKey) {
+                console.error("Invalid key: " + key);
+                return;
+            }
+
+            var container = document.getElementById(key + "-partial-container");
+
+            if (!container) {
+                console.error("No container to place partial result in found for key: " + key);
+                return;
+            }
+
+            var html = getHtml(key);
+            container.innerHTML = html;
+        }
+
+        function getHtml(key) {
+
+            if (key === "output-current") {
+                return `@await Html.PartialAsync("_OutputCurrentPartial.cshtml")`;
+
+            } else if (key === "output-overview") {
+                return `@await Html.PartialAsync("_OutputOverviewPartial.cshtml")`;
+
+            } else if (key === "quick-mode") {
+                return `@await Html.PartialAsync("_QuickModePartial.cshtml")`;
+
+            } else if (key === "command-mode") {
+                return `@await Html.PartialAsync("_CommandModePartial.cshtml")`;
+
+            } else {
+                console.error("No html found for key: " + key);
+                return "";
+            }
+        }
+    </script>
 </body>
 </html>
