--- a/Views/Shared/_OutputCurrentPartial.cshtml
+++ b/Views/Shared/_OutputCurrentPartial.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="output-current-partial-container" class="tab-pane active">
+﻿<div class="tab-pane active output-current-partial-container">
     <img src="https://placehold.co/600x400" alt="Output Image" class="rounded-lg shadow-lg" />
 </div>
 <div id="overview" class="tab-pane hidden">
