--- a/Views/Shared/_OutputOverviewPartial.cshtml
+++ b/Views/Shared/_OutputOverviewPartial.cshtml
@@ -1,8 +1,8 @@
-﻿<div id="output-overview-partial-container" class="tab-pane active">
+﻿<div class="tab-pane active output-overview-partial-container">
     <img src="https://placehold.co/600x400" alt="Output Image" class="rounded-lg shadow-lg" />
-</div>
-<div id="overview" class="tab-pane hidden">
-    <p>
-        The overview is a work in progress.
-    </p>
+    <div id="overview" class="tab-pane hidden">
+        <p>
+            The overview is a work in progress.
+        </p>
+    </div>
 </div>
