--- a/Views/Shared/_CommandModePartial.cshtml
+++ b/Views/Shared/_CommandModePartial.cshtml
@@ -1,6 +1,6 @@
-﻿<h2 class="ml-3 mb-5 font-bold text-lg mb-4 dark:text-zinc-200">Commands</h2>
+﻿<h2 class="ml-3 mb-5 font-bold text-lg dark:text-zinc-200">Commands</h2>
 <div class="space-y-2">
-    <div class="w-full flex justify-between items-center bg-zinc-800 hover:bg-zinc-900 text-zinc-100 font-bold py-2 px-4 rounded-lg shadow-md transition-colors duration-200 dark:bg-zinc-700 dark:hover:bg-zinc-800">
+    <div class="b-lighter-gray w-full flex justify-between items-center hover:bg-zinc-900 text-zinc-100 font-bold py-2 px-4 rounded-lg shadow-md transition-colors duration-200 dark:bg-zinc-700 dark:hover:bg-zinc-800">
         Command 1
         <span class="flex items-center">
             <a href="#" class="mr-2">
@@ -12,3 +12,9 @@
         </span>
     </div>
 </div>
+
+<style>
+    .b-lighter-gray {
+        background-color: #3f3f46;
+    }
+</style>
