--- a/Views/Shared/_ConfigModePartial.cshtml
+++ b/Views/Shared/_ConfigModePartial.cshtml
@@ -1,15 +1,17 @@
-﻿<h2 class="ml-3 mb-5 font-bold text-lg dark:text-zinc-200">Commands</h2>
-<div class="space-y-2">
-    <div class="b-lighter-gray w-full flex justify-between items-center hover:bg-zinc-900 text-zinc-100 font-bold py-2 px-4 rounded-lg shadow-md transition-colors duration-200 dark:bg-zinc-700 dark:hover:bg-zinc-800">
-        Saved configuration I
-        <span class="flex items-center">
-            <a href="#" class="mr-2">
-                <i class="fa-solid fa-gears" style="color: antiquewhite;"></i>
-            </a>
-            <a href="#">
-                <i class="fa-solid fa-truck-fast" style="color: antiquewhite;"></i>
-            </a>
-        </span>
+﻿<div class="py-2 px-4 mx-auto max-w-2xl lg:py-16">
+    <h2 class="mb-4 text-xl font-bold text-white dark:text-white">Saved configurations</h2>
+    <div class="space-y-2">
+        <div class="b-lighter-gray w-full flex justify-between items-center hover:bg-zinc-900 text-zinc-100 font-bold py-2 px-4 rounded-lg shadow-md transition-colors duration-200 dark:bg-zinc-700 dark:hover:bg-zinc-800">
+            Saved configuration I
+            <span class="flex items-center">
+                <a href="#" class="mr-2">
+                    <i class="fa-solid fa-gears" style="color: antiquewhite;"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-truck-fast" style="color: antiquewhite;"></i>
+                </a>
+            </span>
+        </div>
     </div>
 </div>
 
