Further work on generate function

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,22 +1,25 @@
-﻿@{
+﻿@model HomeVm
+
+@{
     ViewData["Title"] = "SD Generator Client";
 }
 
 <div class="min-h-screen flex flex-col bg-zinc-100 dark:bg-zinc-800 text-zinc-900 dark:text-white transition-all duration-300">
     <div class="flex flex-row flex-grow">
-        <aside id="default-sidebar w-1/4" class="" aria-label="Sidenav">
+
+        <aside id="default-sidebar" class="w-1/4" aria-label="Sidenav">
             <div class="pr-15 overflow-y-auto py-5 px-5 h-full bg-zinc-600 border-r border-gray-200 dark:bg-gray-800 dark:border-gray-700">
                 <ul class="space-y-2">
                     <li>
                         <a class="btn-yellow flex items-center p-2 text-base font-normal text-white rounded-lg dark:text-gray hover:bg-gray-100 dark:hover:bg-gray-700 group"
-                            onclick="renderPartial('config-mode');">
-                            <i class="fa-solid fa-trowel-bricks flip-horizontal" style="color: antiquewhite;"></i>
-                            <span class="ml-3" style="color: antiquewhite;">Configurations</span>
-                        </a>
-                        <a class="btn-yellow flex items-center p-2 text-base font-normal text-white rounded-lg dark:text-gray hover:bg-gray-100 dark:hover:bg-gray-700 group"
                             onclick="renderPartial('quick-mode');">
                             <i class="fa-solid fa-walkie-talkie" style="color: antiquewhite;"></i>
                             <span class="ml-3" style="color: antiquewhite;">Quick</span>
+                        </a>
+                        <a class="btn-yellow flex items-center p-2 text-base font-normal text-white rounded-lg dark:text-gray hover:bg-gray-100 dark:hover:bg-gray-700 group"
+                            onclick="renderPartial('config-mode');">
+                            <i class="fa-solid fa-trowel-bricks flip-horizontal" style="color: antiquewhite;"></i>
+                            <span class="ml-3" style="color: antiquewhite;">Configurations</span>
                         </a>
                         <a class="btn-yellow flex items-center p-2 text-base font-normal text-white rounded-lg dark:text-gray hover:bg-gray-100 dark:hover:bg-gray-700 group">
                             <i class="fa-solid fa-truck-fast" style="color: antiquewhite;"></i>
@@ -28,7 +31,7 @@
         </aside>
 
         <div class="main-container config-mode-partial-container quick-mode-partial-container flex-grow p-4 transition-all duration-300">
-            <partial name="~/Views/Shared/_ConfigModePartial.cshtml" />
+            @await Html.PartialAsync("~/Views/Shared/_QuickModePartial.cshtml", @Model.GenerationSettings)
         </div>
          
         <div class="main-container w-full  flex-grow p-4 bg-zinc-200 dark:bg-zinc-700 transition-all duration-300">
@@ -45,7 +48,7 @@
             </div>
 
             <div id="tab-container" class="tab-container tab-content mt-4">
-                @await Html.PartialAsync("~/Views/Shared/_OutputCurrentPartial.cshtml")
+                @await Html.PartialAsync("~/Views/Shared/_OutputCurrentPartial.cshtml", @Model.ImageUrl)
             </div>
 
         </div>
