--- a/Views/Shared/_OutputCurrentPartial.cshtml
+++ b/Views/Shared/_OutputCurrentPartial.cshtml
@@ -1,7 +1,9 @@
-﻿<div class="tab-pane active output-current-partial-container">
-    <img src="https://placehold.co/600x400" alt="Output Image" class="rounded-lg shadow-lg" />
+﻿@model string
+
+<div class="tab-pane active output-current-partial-container">
+    <img src="@Model" alt="Output Image" class="rounded-lg shadow-lg" />
         <p>
         This section provides an overview of the selected category or command, including general
         information and a summary.
-    </p>
+        </p>
 </div>
