--- a/Views/Shared/_QuickModePartial.cshtml
+++ b/Views/Shared/_QuickModePartial.cshtml
@@ -1,34 +1,38 @@
-﻿@model QuickRequestBindingModel
+﻿@model GenerationSettings
 
+@{
+    ViewData["Title"] = "Quick Mode";
+
+}
 <section class="">
     <div class="py-2 px-4 mx-auto max-w-2xl lg:py-16">
         <h2 class="mb-4 text-xl font-bold text-white dark:text-white">Generate</h2>
         <form asp-action="QuickRequest">
             <div class="grid gap-4 sm:grid-cols-2 sm:gap-6">
                 <div class="sm:col-span-2">
-                    <label asp-for="Prompt" class="block mb-2 text-sm font-medium text-white dark:text-white">Prompt</label>
-                    <input asp-for="Prompt" class="b-lighter-gray border border-gray-600 text-white text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:b-lighter-gray dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Enter the main prompt" required />
-                    <span asp-validation-for="Prompt" class="text-red-500"></span>
+                    <label asp-for="@Model.Prompt" class="block mb-2 text-sm font-medium text-white dark:text-white">Prompt</label>
+                    <textarea asp-for="@Model.Prompt" rows="4" class="b-lighter-gray border border-gray-600 text-white text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:b-lighter-gray dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Enter the main prompt" required></textarea>
+                    <span asp-validation-for="@Model.Prompt" class="text-red-500"></span>
                 </div>
                 <div class="sm:col-span-2">
-                    <label asp-for="NegativePrompt" class="block mb-2 text-sm font-medium text-white dark:text-white">Negative Prompt</label>
-                    <input asp-for="NegativePrompt" class="b-lighter-gray border border-gray-600 text-white text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:b-lighter-gray dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Enter the negative prompt" required />
-                    <span asp-validation-for="NegativePrompt" class="text-red-500"></span>
+                    <label asp-for="@Model.NegativePrompt" class="block mb-2 text-sm font-medium text-white dark:text-white">Negative Prompt</label>
+                    <textarea asp-for="@Model.NegativePrompt" rows="4" class="b-lighter-gray border border-gray-600 text-white text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:b-lighter-gray dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Enter the negative prompt" required></textarea>
+                    <span asp-validation-for="@Model.NegativePrompt" class="text-red-500"></span>
                 </div>
                 <div class="w-full">
-                    <label asp-for="GuidanceScale" class="block mb-2 text-sm font-medium text-white dark:text-white">Guidance Scale</label>
-                    <input asp-for="GuidanceScale" type="number" step="0.01" class="b-lighter-gray border border-gray-600 text-white text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:b-lighter-gray dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Enter the guidance scale" required />
-                    <span asp-validation-for="GuidanceScale" class="text-red-500"></span>
+                    <label asp-for="@Model.GuidanceScale" class="block mb-2 text-sm font-medium text-white dark:text-white">Guidance Scale</label>
+                    <input asp-for="@Model.GuidanceScale" type="number" step="0.01" class="b-lighter-gray border border-gray-600 text-white text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:b-lighter-gray dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Enter the guidance scale" required />
+                    <span asp-validation-for="@Model.GuidanceScale" class="text-red-500"></span>
                 </div>
                 <div class="w-full">
-                    <label asp-for="StyleStrength" class="block mb-2 text-sm font-medium text-white dark:text-white">Style Strength</label>
-                    <input asp-for="StyleStrength" type="number" step="0.01" class="b-lighter-gray border border-gray-600 text-white text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:b-lighter-gray dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Enter the style strength" required />
-                    <span asp-validation-for="StyleStrength" class="text-red-500"></span>
+                    <label asp-for="@Model.StyleStrength" class="block mb-2 text-sm font-medium text-white dark:text-white">Style Strength</label>
+                    <input asp-for="@Model.StyleStrength" type="number" step="0.01" class="b-lighter-gray border border-gray-600 text-white text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:b-lighter-gray dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Enter the style strength" required />
+                    <span asp-validation-for="@Model.StyleStrength" class="text-red-500"></span>
                 </div>
                 <div class="w-full">
-                    <label asp-for="InferenceSteps" class="block mb-2 text-sm font-medium text-white dark:text-white">Inference Steps</label>
-                    <input asp-for="InferenceSteps" type="number" class="b-lighter-gray border border-gray-600 text-white text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:b-lighter-gray dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Enter the number of inference steps" required />
-                    <span asp-validation-for="InferenceSteps" class="text-red-500"></span>
+                    <label asp-for="@Model.InferenceSteps" class="block mb-2 text-sm font-medium text-white dark:text-white">Inference Steps</label>
+                    <input asp-for="@Model.InferenceSteps" type="number" class="b-lighter-gray border border-gray-600 text-white text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:b-lighter-gray dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Enter the number of inference steps" required />
+                    <span asp-validation-for="@Model.InferenceSteps" class="text-red-500"></span>
                 </div>
             </div>
             <button type="submit" class="inline-flex items-center px-5 py-2.5 mt-4 sm:mt-6 text-sm font-medium text-center text-white bg-primary-700 rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900 hover:bg-primary-800">
@@ -37,6 +41,32 @@
         </form>
     </div>
 </section>
+
+<script>
+document.querySelector('form').addEventListener('submit', function(event) {
+    event.preventDefault();
+    
+    const formData = new FormData(event.target);
+    console.log("Formdata: ", formData);
+    
+    const xhr = new XMLHttpRequest();
+    xhr.open('POST', '/Home/QuickRequest', true);
+    xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+
+    xhr.onreadystatechange = function() {
+        if (xhr.readyState === 4) {
+            if (xhr.status === 200) {
+                const response = JSON.parse(xhr.responseText);
+                console.log("Response: ", response);
+            } else {
+                alert("Error: " + xhr.statusText);
+            }
+        }
+    };
+    xhr.send(new URLSearchParams(formData).toString());
+});
+</script>
+
 
 <style>
     .b-lighter-gray {
